Do not rescan translation memory if no project is loaded

This was rescanning from root / instead of a project dir
when there was no project loaded.

BUG: 501646
(cherry picked from commit b436f2cfd095dcabe7be492453423612a28ebe97)